[project]
name = "hepo"
version = "0.1.0"
description = "Heuristic Enchanced Policy Optimization implementation in stable-baselines3"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium==0.29.1",
    "numpy>=1.23.5,<2.0.0",
    "stable_baselines3==2.3.2",
    "tensorboard>=2.16,<2.17",
    "torch==2.3.1",
    "wandb==0.17.3",
]

